# pil-314t

./: .gitignore  README.md
.github/workflows/: test-poetry.yml  test-uv.yml
poetry-project/: .gitignore  README.md  pyproject.toml
poetry-project/tests/: test_pil_import.py
uv-project/: .gitignore  README.md  pyproject.toml
